--- a/privacy.css
+++ b/privacy.css
@@ -207,8 +207,10 @@ img {
     display: flex;
 }
 
-.mobile-only {
-    display: none;
+@media (min-width: 768px) {
+    .mobile-only {
+        display: none;
+    }
 }
 
 /* Privacy Header */
